--- a/main.html
+++ b/main.html
@@ -10,6 +10,31 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form>
+		<label for="name">Name</label>
+		<input type="text" id="name" placeholder="Name">
+
+		<label for="phone">Phone Number</label>
+		<input type="text" id="phone" placeholder="Phone Number">
+
+		<label for="address">Address</label>
+		<input type="text" id="address" placeholder="Address">
+
+		<label for="checkbox">Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?" placeholder="Address">
+
+		<label for="multiSelect">Please select your preferred breeds</label>
+		<select id="multiSelect">
+			<option>Fitbull</option>
+			<option>DouberMen</option>
+			<option>Husky</option>
+		</select>
+
+<!-- 		<button type="submit">Submit</button> -->
+		<label for="submit">Submit</label>
+		<input type="submit" id="submit" value="Submit">
+		
+	</form>
 
 </body>
 
